add newznab support

--- a/.env.example
+++ b/.env.example
@@ -34,3 +34,10 @@ NZBDAV_WEBDAV_PASS=webdav-password
 #NZB_TRIAGE_NNTP_TLS=true
 #NZB_TRIAGE_NNTP_USER=username
 #NZB_TRIAGE_NNTP_PASS=password
+
+# Direct Newznab indexers (optional)
+#NEWZNAB_ENABLED=false
+#NEWZNAB_ENDPOINTS=https://indexer1.example,https://indexer2.example
+#NEWZNAB_API_KEYS=key-for-idx1,key-for-idx2
+#NEWZNAB_API_PATHS=/api,/custom/api  # defaults to /api when omitted
+#NEWZNAB_FILTER_NZB_ONLY=true
